@@ -1,0 +1,106 @@
+head_prefix = """\
+%(head_prefix)s"""
+
+
+head = """\
+%(head)s"""
+
+
+stylesheet = """\
+%(stylesheet)s"""
+
+
+body_prefix = """\
+%(body_prefix)s"""
+
+
+body_pre_docinfo = """\
+%(body_pre_docinfo)s"""
+
+
+docinfo = """\
+%(docinfo)s"""
+
+
+body = """\
+%(body)s"""
+
+
+body_suffix = """\
+%(body_suffix)s"""
+
+
+head_prefix = """\
+%(head_prefix)s"""
+
+
+head = """\
+%(head)s"""
+
+
+stylesheet = """\
+%(stylesheet)s"""
+
+
+body_prefix = """\
+%(body_prefix)s"""
+
+
+body_pre_docinfo = """\
+%(body_pre_docinfo)s"""
+
+
+docinfo = """\
+%(docinfo)s"""
+
+
+body = """\
+%(body)s"""
+
+
+body_suffix = """\
+%(body_suffix)s"""
+
+
+title = """\
+%(title)s"""
+
+
+subtitle = """\
+%(subtitle)s"""
+
+
+header = """\
+%(header)s"""
+
+
+footer = """\
+%(footer)s"""
+
+
+meta = """\
+%(meta)s"""
+
+
+fragment = """\
+%(fragment)s"""
+
+
+html_prolog = """\
+%(html_prolog)s"""
+
+
+html_head = """\
+%(html_head)s"""
+
+
+html_title = """\
+%(html_title)s"""
+
+
+html_subtitle = """\
+%(html_subtitle)s"""
+
+
+html_body = """\
+%(html_body)s"""
